# advanced-swe

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
datalake/raw/datasus/: Bundle-f69f5d52-3447-4772-85c4-0f1402cb3bbe.json
semantic_search/: __init__.py
semantic_search/core/config/: __init__.py  settings.py
semantic_search/core/logging/: __init__.py  config.py  handlers.py  logger.py
