[project]
name = "semantic_search"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Natan Nascimento", email = "contato@natanascimento.com"},
]
dependencies = [
    "sentence-transformers>=3.0.1",
    "datasets>=2.21.0",
    "pandas>=2.2.2",
    "pymilvus>=2.4.5",
    "numpy>=2.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = {call = "semantic_search:start"}